# examples

./: README.md
a1/: .gitignore  read_only.java  simple.java  using_multiple_connections.java  using_the_appender.java
a1/weather/: List_of_cities_by_average_temperature_1.parquet  List_of_cities_by_average_temperature_2.parquet  List_of_cities_by_average_temperature_3.parquet  List_of_cities_by_average_temperature_4.parquet  List_of_cities_by_average_temperature_5.parquet  List_of_cities_by_average_temperature_6.parquet  README
ch03/: 2020_1200.csv  P__Populate_prices.sql  P__Populate_readings.sql  P__Populate_readings_system34.sql  P__Populate_systems.sql  V01__Create_table_systems.sql  V02__Create_table_readings.sql  V03__Create_table_prices.sql  V04__Add_column_valid_until.sql  consumption.csv  export.csv  import.csv  prices.csv  production.csv
ch03/ch03_db/: load.sql  prices.parquet  readings.parquet  schema.sql  systems.parquet
ch04/: ghi_past_and_future.json
ch05/: .gitignore  atp_rankings.xlsx
ch05/european_soccer_database/: source.txt
ch05/xg/: matches.json  shots_2014-08-16T12:45:00_2014-09-13T15:00:00.json  shots_2014-09-13T15_00_00_2014-10-04T17_30_00.json  shots_2014-10-05T12_00_00_2014-11-02T16_00_00.json  (+97 more)
ch08/dagster/: .gitignore  pyproject.toml
ch08/dagster/atp/: __init__.py  assets.py
ch08/dagster/step1/atp/: assets.py
ch08/dagster/step2/atp/: assets.py
ch08/dagster/step3/atp/: __init__.py  assets.py
ch08/dagster/step4_motherduck/atp/: __init__.py
ch09/: app.py  dagster_iris.py  pyproject.toml
ch09/atp/: __init__.py  assets.py
(+18 files in other folders)
