[tool.poetry]
name = "dagster-duckdb-example"
version = "0.1.0"
description = ""
authors = ["Mark Needham <m.h.needham@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
dagster = "^1.6.8"
dagster-duckdb = "^0.22.8"
dagster-webserver = "^1.6.8"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
